Fix code after review
The nav-links was fixed from overflowing
remove !important value in css
validate html in w3c.

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,13 @@ a {
 
 /* HEADER */
 
-.header-wrapper {
-  background-color: #f72210 !important;
+body .header-wrapper {
+  background-color: #f72210;
   height: 100px;
 }
 
-.header-wrapper-small {
-  background-color: #f72210 !important;
+body .header-wrapper-small {
+  background-color: #f72210;
 }
 
 .header-wrapper h1 {
@@ -82,14 +82,20 @@ a {
   right: 0;
   content: "";
   display: block;
-  width: 55px;
+  width: 120px;
   background-color: #f72210;
   border-left: 12px solid white;
   border-top: 13px solid #f72210;
 }
 
-.main-nav .nav-link {
-  color: black !important;
+body .main-nav .nav-item .nav-link {
+  color: black;
+  font-size: 1rem;
+  padding: 0 0.4rem;
+}
+
+body .main-nav .nav-item .nav-link:hover {
+  color: #f72210;
 }
 
 .article-title,
@@ -101,14 +107,14 @@ a {
   text-decoration: none;
 }
 
-.card-title a {
+body .card-title a {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 700;
   font-size: 20px;
   margin-bottom: 10px;
   padding-left: 0;
   margin-left: 0;
-  color: black !important;
+  color: black;
   text-decoration: none;
 }
 
@@ -256,9 +262,9 @@ a {
 }
 
 /* OPINION SECTION */
-.pandemic-heroes-title a {
+body .pandemic-heroes-title a {
   font: bold 16px/19px "Roboto Condensed", sans-serif;
-  color: rgba(3, 3, 3, 0.5) !important;
+  color: rgba(3, 3, 3, 0.5);
   text-decoration: none;
 }
 
@@ -295,10 +301,10 @@ a {
   font-size: 15px;
 }
 
-.magazine-category a {
+body .magazine-category a {
   font: bold 16px/26px "Roboto Condensed", sans-serif;
-  color: #f72210 !important;
-  text-decoration: none !important;
+  color: #f72210;
+  text-decoration: none;
 }
 
 .in-the-magazine .btn-primary-1 {
@@ -333,8 +339,8 @@ a {
   font: bold 17px/16px "Roboto Condensed", sans-serif;
 }
 
-.btn-magazine-cat:hover {
-  color: #dbdcdd !important;
+body .btn-magazine-cat:hover {
+  color: #dbdcdd;
 }
 
 .in-the-magazine .card,
@@ -447,8 +453,8 @@ a {
     font-size: 15px;
   }
 
-  .container {
-    width: 50% !important;
+  body .container {
+    width: 50%;
   }
 }
 
@@ -473,8 +479,8 @@ a {
     height: 285px;
   }
 
-  .container {
-    width: 100% !important;
+  body .container {
+    width: 100%;
   }
 }
 
@@ -491,5 +497,11 @@ a {
 
   .in-the-magazine-cat:not(.mag-other-rows) {
     margin-top: 3rem;
+  }
+
+  body .main-nav .nav-item .nav-link {
+    color: black;
+    font-size: 1.2rem;
+    padding: 0 0.6rem;
   }
 }
